# infra-infrastructure

./: .ansible-lint  .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .yamllint  ACKNOWLEDGEMENTS.md  Dockerfile  README.md  ansible.cfg  config.sh  flake.nix  hosts.yml  pyproject.toml  renovate.json  requirements.yml  simple-ansible-inventory.py
authentik/: .terraform.lock.hcl  apps_alertmanager.tf  apps_grafana.tf  apps_hedgedoc.tf  apps_jellyfin.tf  apps_lidarr.tf  apps_mail.tf  apps_matrix.tf  apps_mattermost.tf  apps_nextcloud.tf  apps_prometheus.tf  apps_prowlarr.tf  apps_radarr.tf  apps_readarr.tf  apps_sonarr.tf  apps_thanos.tf  apps_torrent.tf  apps_traefik.tf  apps_v-core-3.tf  apps_vault.tf  apps_vikunja.tf  auth_upsilon.tf  flows.tf  groups.tf  init.sh  integrations.tf  scopes.tf  tenants.tf  users.tf  versions.tf
gitlab/: .terraform.lock.hcl  groups.tf  groups_implem.tf  init.sh  labels.tf  main.tf  repositories.tf  repositories_implem.tf  users.tf  users_implem.tf  versions.tf
grafana/: .terraform.lock.hcl  dashboards.tf  init.sh  todo  versions.tf
group_vars/: acme_client.yml  acme_server.yml  afs_cell.yml  bar.yml  bar_music.yml  dns.yml  docker.yml  fra.yml  fsn.yml  gitlab_runner.yml  k3s.yml  kvm.yml  load_balancer.yml  matrix_servers  pop.yml  pvl.yml  router.yml  vpn.yml
playbooks/: acme.yml  afs.yml  auth.yml  backups.yml  base.yml  common.yml  dhcp.yml  dns.yml  docker.yml  gitlab_runner.yml  gps.yml  k3s.yml  kvm.yml  load_balancer.yml  main.yml  mongodb.yml  network.yml  observability.yml  postgresql.yml  redis.yml  (+4 more)
(+1316 files in other folders)
