[project]
name = "infrastructure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "ansible==11.5.0",
    "ansible-lint==25.2.1",
    "black==25.1.0",
    "hvac==2.3.0",
    "jmespath==1.0.1",
    "pre-commit==4.2.0",
    "ruff==0.11.5",
    "xmltodict==0.14.2",
    "yamllint==1.37.0",
]

[tool.uv]
compile-bytecode = true
